--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
     - name: handle-list
       run: |
         milestone=$(cat offersku.json | jq '.mailstone')
-        echo $milestone
         jq "[.task[] | {appname:.appname,version:.version[],distribution:.distribution[],platform:.platform[],os:.os[],assignees:.assignees}]" offersku.json > test.json
-        echo "111"
-        cat test.json
+        num=$(jq '.|length')
+        echo $num
+        
 #        gh issue create --project "Roadmap" --assignee monalisa --title "I found a bug" --body "Nothing works" --body-file <file> --milestone <name>
           
         
