--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,9 @@ jobs:
       run: |
         milestone=$(cat offersku.json | jq '.mailstone')
         jq "[.task[] | {appname:.appname,version:.version[],distribution:.distribution[],platform:.platform[],os:.os[],assignees:.assignees}]" offersku.json > test.json
-        num=$(jq '.|length')
+        num=$(jq '.|length' test.json)
         echo $num
+        cat test.json
         
 #        gh issue create --project "Roadmap" --assignee monalisa --title "I found a bug" --body "Nothing works" --body-file <file> --milestone <name>
           
