--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,10 @@ jobs:
     - name: handle-list
       run: |
         milestone=$(cat offersku.json | jq '.mailstone')
-        jq "[.task[] | {appname:.appname,version:.version[],distribution:.distribution[],platform:.platform[],os:.os[],assignees:.assignees}]" offersku.json > test.json
-        num=$(jq '.|length' test.json)
-        for ((i=0; i<$num; i++));do
-            appname=$(jq '.[$i].appname' test.json)
-            echo $appname
+        list=$(jq "[.task[] | {appname:.appname,version:.version[],distribution:.distribution[],platform:.platform[],os:.os[],assignees:.assignees}]" offersku.json)
+        length=$(echo $list | jq '.|length')
+        for index in `seq 0 $length`;do
+          echo $list | jq ".[$index].appname";
         done
         
 #        gh issue create --project "Roadmap" --assignee monalisa --title "I found a bug" --body "Nothing works" --body-file <file> --milestone <name>
