--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           platform=$(echo $list | jq ".[$index].platform")
           os=$(echo $list | jq ".[$index].os")
           assignees=$(echo $list | jq ".[$index].assignees")
-          gh issue create --project "TODO" --assignee assignees --title "$appname$version $distribution on $os on $platform" --body-file .github/ISSUE_TEMPLATE/create_offersku.md --milestone $milestone
+          gh issue create --project TODO --assignee assignees --title "$appname$version $distribution on $os on $platform" --body-file .github/ISSUE_TEMPLATE/create_offersku.md --milestone $milestone
         done
         
           
