--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         echo $(curl --request POST \
                     --url https://api.github.com/graphql \
                     --header 'Authorization: Bearer ${{github.token}}' \
-                    --data '{"query":"{user(login: \"zl-go\") {projectsV2(first: 20) {nodes {id title}}}}"}')
+                    --data '{"query":"query{user(login: \"zl-go\") {projectV2(number: 2){id,title}}}"}')
         for ((index=0;index<$length;index++));do
           appname=$(echo $list | jq ".[$index].appname")
           version=$(echo $list | jq ".[$index].version")
