--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       name: Check out code
     - name: handle-list
       run: |
-        milestone=$(cat offersku.json | jq '.mailstone')
+        milestone=$(cat offersku.json | jq '.mailstone' | sed 's/\"//g')
         list=$(jq "[.task[] | {appname:.appname,version:.version[],distribution:.distribution[],platform:.platform[],os:.os[],assignees:.assignees}]" offersku.json)
         length=$(echo $list | jq '.|length')
         for ((index=0;index<$length;index++));do
