--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,18 @@ jobs:
     - name: handle-list
       run: |
         milestone=$(cat offersku.json | jq '.mailstone' | sed 's/\"//g')
+        
+        allMilestones=$(curl \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{secrets.GIHUB_TOKEN}}"\
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq ".title[]" | sed 's/\"//g')
+          
+        cat $allMilestones  
+        
+        length=$(echo $list | jq '.|length')  
+        for ((index=0;index<$length;index++));do
+        
         list=$(jq "[.task[] | {appname:.appname,version:.version[],distribution:.distribution[],platform:.platform[],os:.os[],assignees:.assignees}]" offersku.json)
         length=$(echo $list | jq '.|length')
         for ((index=0;index<$length;index++));do
