--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq ".title" | sed 's/\"//g')
           
-        cat $allMilestones  
+        echo $allMilestones  
         
         length=$(echo $list | jq '.|length')  
         for ((index=0;index<$length;index++));do
