--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{github.token}}"\
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq '.[] | .name')
+          https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq '.[] | .title')
           
         echo $allMilestones  
         
