--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,27 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{github.token}}"\
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq '.[] | .title')
-          
-        echo $allMilestones  
+          https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq  -r '.[] | .title')
+        
+        createFlag=ture
+        for item in $allMilestones;do
+          if [$item==$milestone];then
+            $createFlag=false
+            break
+          fi 
+        done
+        
+        if [$createFlag==true];then
+          curl \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{github.token}}"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones \
+            -d '{"title":${milestone},"state":"open"}'
+        fi
         
         length=$(echo $list | jq '.|length')  
-        for ((index=0;index<$length;index++));do
-        
         list=$(jq "[.task[] | {appname:.appname,version:.version[],distribution:.distribution[],platform:.platform[],os:.os[],assignees:.assignees}]" offersku.json)
         length=$(echo $list | jq '.|length')
         for ((index=0;index<$length;index++));do
