--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,14 +22,14 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq  -r '.[] | .title')
         
-        createFlag=ture
+        createFlag=true
         for item in $allMilestones;do
           if [[ $item == $milestone ]];then
             $createFlag=false
             break
           fi 
         done
-        
+        echo $createFlag
         if [[ $createFlag == true ]];then
           echo "create new milestone"
           curl \
