--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
             -H "Authorization: Bearer ${{github.token}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones \
-            -d '{"title":"$milestone","state":"open"}'
+            -d '{"title":"${{milestone}}","state":"open"}'
         fi
         
         length=$(echo $list | jq '.|length')  
