--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: handle-list
       run: |
         milestone=$(cat offersku.json | jq -r '.mailstone')
-        
+        echo "milestone=$milestone" >> $GITHUB_ENV
         allMilestones=$(curl \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{github.token}}"\
@@ -38,7 +38,7 @@ jobs:
             -H "Authorization: Bearer ${{github.token}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones \
-            -d '{"title":"${{milestone}}","state":"open"}'
+            -d '{"title":"${{env.milestone}}","state":"open"}'
         fi
         
         length=$(echo $list | jq '.|length')  
