--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,22 +14,22 @@ jobs:
       name: Check out code
     - name: handle-list
       run: |
-        milestone=$(cat offersku.json | jq -r '.mailstone')
+        milestone=$(cat offersku.json | jq '.mailstone')
         allMilestones=$(curl \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{github.token}}"\
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq  -r '.[] | .title')
+          https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq  '.[] | .title')
         
-        createFlag=true
+        createFlag="true"
         for item in $allMilestones;do
           if [[ $item == $milestone ]];then
-            $createFlag=false
+            $createFlag="false"
             break
           fi 
         done
         echo $createFlag
-        if [[ $createFlag == true ]];then
+        if [[ $createFlag == "true" ]];then
           echo "create new milestone"
           curl \
             -X POST \
