--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
         for item in $allMilestones;do
           if [[ $item == $milestone ]];then
             createFlag="false"
+            echo "milestone exist"
             break
           fi 
         done
@@ -49,7 +50,7 @@ jobs:
           platform=$(echo $list | jq -r ".[$index].platform")
           os=$(echo $list | jq -r ".[$index].os")
           assignees=$(echo $list | jq -r ".[$index].assignees")
-          gh issue create --assignee $assignees --title "$appname$version $distribution on $os on $platform" --body-file .github/ISSUE_TEMPLATE/create_offersku.md --milestone '$milestone | sed 's/\"//g''
+            gh issue create --assignee $assignees --title "$appname$version $distribution on $os on $platform" --body-file .github/ISSUE_TEMPLATE/create_offersku.md --milestone `$milestone | sed 's/\"//g'`
         done
 
 
