--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,13 @@ jobs:
           distribution=$(echo $list | jq -r ".[$index].distribution")
           platform=$(echo $list | jq -r ".[$index].platform")
           os=$(echo $list | jq -r ".[$index].os")
-          assignees=$(echo $list | jq -r ".[$index].assignees")
-            gh issue create --assignee $assignees --title "$appname$version $distribution on $os on $platform" --body-file .github/ISSUE_TEMPLATE/create_offersku.md --milestone `$milestone | sed 's/\"//g'`
+          assignee=$(echo $list | jq -r ".[$index].assignees")
+          stone=$(echo $milestone | sed 's/\"//g')
+          gh issue create\ 
+              --assignee $assignee\ 
+              --title "$appname$version $distribution on $os on $platform"\ 
+              --body-file .github/ISSUE_TEMPLATE/create_offersku.md\ 
+              --milestone $stone
         done
 
 
