--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,11 +51,7 @@ jobs:
           os=$(echo $list | jq -r ".[$index].os")
           assignee=$(echo $list | jq -r ".[$index].assignees")
           stone=$(echo $milestone | sed 's/\"//g')
-          gh issue create\ 
-              --assignee $assignee\ 
-              --title "$appname$version $distribution on $os on $platform"\ 
-              --body-file .github/ISSUE_TEMPLATE/create_offersku.md\ 
-              --milestone $stone
+          gh issue create --assignee $assignee --title "$appname$version $distribution on $os on $platform" --body-file .github/ISSUE_TEMPLATE/create_offersku.md --milestone $stone
         done
 
 
