--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,5 +55,9 @@ jobs:
           curl --request POST \
             --url https://api.github.com/graphql \
             --header 'Authorization: Bearer ${{github.token}}' \
+            --data '{"query":"query{user(login: \"${{github.repository_owner}}\") {projectV2(number: 2){id}}}"}'
+          curl --request POST \
+            --url https://api.github.com/graphql \
+            --header 'Authorization: Bearer ${{github.token}}' \
             --data '{"query":"mutation {addProjectV2ItemById(input: {projectId: \"2\" contentId: \"$issue_id\"}) {item {id}}}"}'
         done
