--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,12 +52,12 @@ jobs:
           assignee=$(echo $list | jq -r ".[$index].assignees")
           stone=$(echo $milestone | sed 's/\"//g')
           issue_id=$(gh issue create --assignee $assignee --title "$appname$version $distribution on $os on $platform" --body-file .github/ISSUE_TEMPLATE/create_offersku.md --milestone $stone | awk -F "/" '{print $NF}')
-          curl --request POST \
+          project_id=$(curl --request POST \
             --url https://api.github.com/graphql \
             --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
-            --data '{"query":"query{user(login: \"${{github.repository_owner}}\") {projectV2(number: 2){id}}}"}'
+            --data '{"query":"query{user(login: \"${{github.repository_owner}}\") {projectV2(number: 2){id}}}"}' | jq -r .data.user.projectV2.id)
           curl --request POST \
             --url https://api.github.com/graphql \
             --header 'Authorization: Bearer ${{github.token}}' \
-            --data '{"query":"mutation {addProjectV2ItemById(input: {projectId: \"2\" contentId: \"$issue_id\"}) {item {id}}}"}'
+            --data '{"query":"mutation {addProjectV2ItemById(input: {projectId: \"$project_id\" contentId: \"$issue_id\"}) {item {id}}}"}'
         done
