--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{github.token}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{github.repository_owner}}/manufacture/issues/$issue_number | jq .node_id)
+            https://api.github.com/repos/${{github.repository_owner}}/manufacture/issues/$issue_number | jq -r .node_id)
           echo $issue_id
           project_id=$(curl --request POST \
             --url https://api.github.com/graphql \
@@ -66,5 +66,5 @@ jobs:
           curl --request POST \
             --url https://api.github.com/graphql \
             --header 'Authorization: Bearer ${{github.token}}' \
-            --data '{"query":"mutation {addProjectV2ItemById(input: {projectId: \"'$project_id'\" contentId: \"'$issue_id'\"}) {item {id}}}"}'
+            --data '{"query":"mutation {addProjectV2ItemById(input: {projectId: \"$project_id\" contentId: \"$issue_id\"}) {item {id}}}"}'
         done
