--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
     - name: handle-list
       run: |
         deleteRow=$(grep -n "---" .github/ISSUE_TEMPLATE/create_offersku.md | cut -d ":" -f 1 | sed -n '2p')
-        cat sed -i '1,'$deleteRow'd' .github/ISSUE_TEMPLATE/create_offersku.md > template.md
+        sed -i "1,'${deleteRow}'d" .github/ISSUE_TEMPLATE/create_offersku.md > template.md
         cat template.md
