--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,28 +14,28 @@ jobs:
       name: Check out code
     - name: handle-list
       run: |
+        # 删除issue模板文件前的元信息
         cat .github/ISSUE_TEMPLATE/create_offersku.md > template.md
         deleteRow=$(grep -n "\-\-\-" template.md | cut -d ":" -f 1 | sed -n '2p')
         for ((index=0;index<$deleteRow;index++));do
           sed -i '1d' template.md
         done
+    
+        # 创建milestone
         milestone=$(cat offersku.json | jq '.mailstone')
         allMilestones=$(curl \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{github.token}}"\
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq  '.[] | .title')
-        
+          https://api.github.com/repos/${{github.repository_owner}}/manufacture/milestones | jq  '.[] | .title')        
         createFlag="true"
         for item in $allMilestones;do
           if [[ $item == $milestone ]];then
             createFlag="false"
-            echo "milestone exist"
             break
           fi 
         done
         if [[ $createFlag == "true" ]];then
-          echo "create new milestone"
           curl \
             -X POST \
             -H "Accept: application/vnd.github+json" \
@@ -52,7 +52,8 @@ jobs:
           --url https://api.github.com/graphql \
           --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
           --data '{"query":"query{user(login: \"${{github.repository_owner}}\") {projectV2(number: 2){id}}}"}' | jq -r .data.user.projectV2.id)
-        echo $project_id
+
+        # 创建issue
         for ((index=0;index<$length;index++));do
           appname=$(echo $list | jq -r ".[$index].appname")
           version=$(echo $list | jq -r ".[$index].version")
@@ -62,12 +63,12 @@ jobs:
           assignee=$(echo $list | jq -r ".[$index].assignees")
           stone=$(echo $milestone | sed 's/\"//g')
           issue_number=$(gh issue create --assignee $assignee --title "$appname$version $distribution on $os on $platform" --body-file template.md --milestone $stone | awk -F "/" '{print $NF}')
+          # 关联project
           issue_id=$(curl \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{github.token}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository_owner}}/manufacture/issues/$issue_number | jq -r .node_id)
-          echo $issue_id
           curl --request POST \
             --url https://api.github.com/graphql \
             --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
