--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,6 @@ jobs:
           --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
           --data '{"query":"query{ node(id: \"'$project_id'\") { ... on ProjectV2 { fields(first: 20) { nodes { ... on ProjectV2Field { id name } ... on ProjectV2IterationField { id name configuration { iterations { startDate id }}} ... on ProjectV2SingleSelectField { id name options { id name }}}}}}}"}')
         status_id=$(echo $field_id | jq -r '.data.node.fields.nodes[2].id'
+        echo $status_id
         produce_id=$(echo $field_id | jq -r '.data.node.fields.nodes[2].options[1].id'
-        issue_id=$(curl \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{github.token}}"\
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{github.repository_owner}}/manufacture/issues/19 | jq -r .node_id)
-        curl --request POST \
-          --url https://api.github.com/graphql \
-          --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
-          --data '{"query":"mutation {updateProjectV2ItemFieldValue( input: { projectId: \"PROJECT_ID\" itemId: \"'$issue_id'\" fieldId: \"'status_id'\" value: { singleSelectOptionId: \"'produce_id'\" }}) { projectV2Item { id }}}"}'
+        echo $produce_id
