--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
           --data '{"query":"query{ node(id: \"'$project_id'\") { ... on ProjectV2 { fields(first: 20) { nodes { ... on ProjectV2Field { id name } ... on ProjectV2IterationField { id name configuration { iterations { startDate id }}} ... on ProjectV2SingleSelectField { id name options { id name }}}}}}}"}')
         echo $field_id
-        status_id=$(echo $field_id | jq -r '.data.node.fields.nodes[2].id'
+        status_id=$(echo $field_id | jq -r '.data.node.fields.nodes[2].id')
         echo $status_id
-        produce_id=$(echo $field_id | jq -r '.data.node.fields.nodes[2].options[1].id'
+        field_id=$(echo $status_id | jq -r '.data.node.fields.nodes[2].options[1].id')
         echo $produce_id
