--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,14 @@ jobs:
         echo $field_id
         status_id=$(echo $field_id | jq -r '.data.node.fields.nodes[2].id')
         echo $status_id
-        produce_id=$(echo $status_id | jq -r '.data.node.fields.nodes[2].options[1].id')
+        produce_id=$(echo $field_id | jq -r '.data.node.fields.nodes[2].options[1].id')
         echo $produce_id
+        issue_id=$(curl \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{github.token}}"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{github.repository_owner}}/manufacture/issues/19 | jq -r .node_id)
+        curl --request POST \
+          --url https://api.github.com/graphql \
+          --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
+          --data '{"query":"mutation {updateProjectV2ItemFieldValue( input: { projectId: \"'$project_id'\" itemId: \"'$issue_id'\" fieldId: \"'status_id'\" value: { singleSelectOptionId: \"'produce_id'\" }}) { projectV2Item { id }}}"}'
