--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
         curl --request POST \
           --url https://api.github.com/graphql \
           --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
-          --data '{"query":"mutation {updateProjectV2ItemFieldValue( input: { projectId: \"'$project_id'\" itemId: \"'$issue_id'\" fieldId: \"'status_id'\" value: { singleSelectOptionId: \"'produce_id'\" }}) { projectV2Item { id }}}"}'
+          --data '{"query":"mutation {updateProjectV2ItemFieldValue( input: { projectId: \"'$project_id'\" itemId: \"'$issue_id'\" fieldId: \"'$status_id'\" value: { singleSelectOptionId: \"'$produce_id'\" }}) { projectV2Item { id }}}"}'
