--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
             -H "Authorization: Bearer ${{github.token}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository_owner}}/manufacture/issues/19 | jq -r .node_id)
+        echo $issue_id
         curl --request POST \
           --url https://api.github.com/graphql \
           --header 'Authorization: Bearer ${{ secrets.ACCESS_PROJECT }}' \
