--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{github.token}}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{github.repository_owner}}/manufacture/issues/19 | jq -r .node_id)
+            https://api.github.com/repos/${{github.repository_owner}}/manufacture/issues/19 | jq .node_id)
         echo $issue_id
         curl --request POST \
           --url https://api.github.com/graphql \
