--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
           distribution=$(echo $list | jq -r ".[$index].distribution")
           platform=$(echo $list | jq -r ".[$index].platform")
           os=$(echo $list | jq -r ".[$index].os")
-          assignee=$(map[echo $list | jq -r ".[$index].assignees"])
+          assignee=${map[$(echo $list | jq -r ".[$index].assignees")]}
           stone=$(echo $milestone | sed 's/\"//g')
           issue_number=$(gh issue create --assignee $assignee --title "$appname$version $distribution on $os on $platform" --body-file template.md --milestone $stone | awk -F "/" '{print $NF}')
           # 关联project
